<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".chatRoom.ChatRoomActivity"
    android:id="@+id/chatRoomRootView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/chatToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/popupMenu"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:srcCompat="@drawable/ic_overflow_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/toolbarProfileImage"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="VectorDrawableCompat" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/toolbarUserName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/popupMenu"
                    app:layout_constraintStart_toEndOf="@+id/toolbarProfileImage"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:windowSoftInputMode="adjustResize"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/chatBoxLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBarLayout" />

    <LinearLayout
        android:id="@+id/chatBoxLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="48dp"
        android:background="#00ffffff"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/chatView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/chatBox"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:hint="@string/chat_room_enter_message_m"
            android:background="@drawable/round_chat_box"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:inputType="textMultiLine"
            android:maxLength="256"
            android:maxLines="6"
            android:scrollbars="vertical" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonChatBoxSend"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            app:elevation="0dp"
            app:fabCustomSize="40dp"
            app:srcCompat="@drawable/ic_send_white"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>