...
            </androidx.cardview.widget.CardView>




            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/questionCategoriesList"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="8dp"
                android:background="@color/colorLightDim"
                android:layoutDirection="rtl">

...
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccentDark"
            app:elevation="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/questionList"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="8dp"
            android:background="@color/colorLightDim"
            android:layoutDirection="rtl">

...
