<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/generateQuestion"
        android:title="@string/generateQuestion" />
    <item
        android:id="@+id/reportAbuse"
        android:title="@string/reportAbuse" />

</menu>