...
            android:text="@string/empty_chat_list_message_m"
            android:textColor="@color/textSecondary"
            android:textSize="32sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="60dp" />

    </LinearLayout>
...
