<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/main_menu_search_title"
        android:icon="@drawable/ic_search_24dp"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>