...
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userDescription" />

    <ScrollView
        android:id="@+id/scrollViewLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1">
...
                android:gravity="center"
                android:text="@string/user_profile_characteristics"
                android:textColor="@color/textSecondary"
                android:textSize="18sp" />

            <TableLayout
                android:id="@+id/bubblesRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/divider2"
                android:layout_width="wrap_content"
...
