<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionEditProfile"
        android:icon="@drawable/ic_check_white"
        android:title="@string/action_save_profile_edit"
        app:showAsAction="always"/>

</menu>