<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_onboarding"
    tools:context=".HobbiesDemoActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hobbyTitlesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>