<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/chats"
        android:icon="@drawable/ic_chat_bubble_white"
        android:title="@string/chat_list_action_title" />

    <item
        android:id="@+id/classes"
        android:icon="@drawable/ic_school_white"
        android:title="@string/classes_list_action_title" />
    <item
        android:id="@+id/user_profile"
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:title="@string/user_profile_action_title" />

</menu>