...
            app:layout_constraintBottom_toTopOf="@id/cardViewName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageFemale"
                android:layout_width="128dp"
                android:layout_height="128dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageMale"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.appcompat.widget.AppCompatTextView>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textFieldFirstName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:digits="@string/allowed_letters"
                        android:hint="@string/text_field_hint"
                        android:imeOptions="flagNoExtractUi"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textFieldFirstName">

                    </androidx.appcompat.widget.AppCompatTextView>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textFieldLastName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:digits="@string/allowed_letters"
                        android:hint="@string/text_field_hint"
                        android:imeOptions="flagNoExtractUi"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/user_setup_region_title"
                        android:textColor="@color/textPrimary"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/regionListSpinner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/schoolListSpinner">

                    </TextView>

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
...
