...
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/user_setup_done_title"
            app:layout_constraintBottom_toBottomOf="@id/editTabs"
            app:layout_constraintEnd_toEndOf="parent"
...
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/editTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@id/userSetupContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabBackground="@drawable/tab_layout_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
...
